Fixed carousel margins on mobile

--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -165,17 +165,6 @@ body {
 	#container-carousel {
 		margin-bottom: 10px;
 	}
-	#main-carousel {
-	    max-width: 400px;
-
-	    margin: 0 auto;
-	}
-
-	#main-carousel img {
-	    min-width: 100%;
-	    min-height: 100%;
-
-	}
 	.carousel-caption {
 		font-size: 80%;
 	}
